--- a/assets/css/gif-style.css
+++ b/assets/css/gif-style.css
@@ -39,3 +39,11 @@ button {
 #gif-form {
     margin-top: 10px;
 }
+h4 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.5em;
+}
+
+#theButton {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
